# Calculadora

./: .gitignore  CMakeLists.txt  Doxyfile  README.adoc
src/: UICalculator.cpp  UICalculator.h  engine.cpp  engine.h  main.cpp
